--- a/CODE.ipynb
+++ b/CODE.ipynb
@@ -29,17 +29,38 @@
    ],
    "source": [
     "#Importa los paquetes necesarios\n",
-    "%pylab inline\n",
-    "\n",
+    "from __future__ import division\n",
+    "from pylab import *\n",
     "import csv, os, random, sys, shutil, time\n",
     "from emcee_code import emcee_code_function, modelo\n",
     "from optparse import OptionParser\n",
-    "from __future__ import division\n",
     "from scipy import stats\n",
+    "from optparse import OptionParser\n",
     "import numpy\n",
     "numpy.set_printoptions(threshold=numpy.nan)\n",
     "\n",
+    "parser=OptionParser()\n",
     "tamano=14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "parser.add_option(\"-i\",\"--input\", action=\"store\", type=\"string\", dest=\"InputFile\", help=\"Path of the .csv input file. Special requirements: The values of the last column will be overwriten. The columns previous to the last one must contain the parameters used for the fitting.\")\n",
+    "parser.add_option(\"-j\",\"--jobname\", action=\"store\", type=\"string\", dest=\"Jobname\", help=\"Name of the job that is being run. No files or directories will ever be overwriten.\")\n",
+    "parser.add_option(\"-n\", \"--param\", action=\"store\", type=\"int\", dest=\"NumParam\", help=\"Number of columns previous to the last one that will be considered as parameters for the MC fitting.\")\n",
+    "parser.add_option(\"-t\", \"--train\", action=\"store\", type=\"int\", dest=\"NumTrainMol\", help=\"Number of random entries (rows) from the input file that will be considered as part of the training set. All the molecules that are not in the Training Set will be part of the Test Set.\")\n",
+    "parser.add_option(\"-s\", \"--seed\", action=\"store\", type=\"int\", dest=\"RandomSeed\", help=\"Seed used for the semi-random selection of the entries used in the Training Set.\")\n",
+    "parser.add_option(\"-th\", \"--threshold\", action=\"store\", type=\"int\", dest=\"Threshold\", help=\"Entries with an activity lower or equal than this value will be considered as active molecules.\")\n",
+    "parser.add_option(\"-cb\", \"-cboolean\", action=\"store\", type=\"int\", dest=\"BooleanActivity\", help=\"Number of the column (starting from 0) that is going to be overwritten depending on the numeric value of the activity (see option -th).\")\n",
+    "parser.add_option(\"-ca\", \"-cactivity\", action=\"store\", type=\"int\", dest=\"NumericActivity\", help=\"Number of the column (starting from 0) that contains the numeric activity of each entry.\")\n",
+    "\n",
+    "(options, args) = parser.parse_args()"
    ]
   },
   {
@@ -51,15 +72,15 @@
    },
    "outputs": [],
    "source": [
-    "inputfile='Input.csv' \n",
-    "Nombre='test'\n",
-    "numParam=3\n",
+    "inputfile=options.InputFile\n",
+    "Nombre=options.Jobname\n",
+    "numParam=options.NumParam\n",
     "\n",
-    "numTrainMol=105\n",
-    "semilla=1\n",
-    "thresAct=1 #Por debajo (o igual) a este valor se considera el compuesto activo\n",
-    "coluAct=2\n",
-    "coluMIC=3\n",
+    "numTrainMol=options.NumTrainMol\n",
+    "semilla=options.RandomSeed\n",
+    "thresAct=options.Threshold #Por debajo (o igual) a este valor se considera el compuesto activo\n",
+    "coluAct=options.BooleanActivity\n",
+    "coluMIC=options.NumericActivity\n",
     "\n",
     "#########################################################################################################################\n",
     "start_mom = time.strftime(\"%c\")\n",
@@ -372,7 +393,6 @@
     "regre_test = stats.linregress(mic_test, modelo(matriz_propiedades_test, parametros_sin_error))\n",
     "p_test=arange(min(mic_test), max(mic_test), 0.01)\n",
     "lin_test=p_test*regre_test[0]+ regre_test[1]\n",
-    "print len(p_test), len(lin_test)\n",
     "#Grafica la actividad predicha y experimental del Test Set\n",
     "figure(figsize=(8,8)); hold=True\n",
     "plot(mic_test, modelo(matriz_propiedades_test, parametros_sin_error), 'mo', label='Test Set')\n",
@@ -492,7 +512,7 @@
     }
    ],
    "source": [
-    "#Grafica curva de enriquecimiento ordenando según valores de CODE\n",
+    "#Grafica curva de enriquecimiento ordenando segun valores de CODE\n",
     "figure(figsize=(8,8)); hold=True\n",
     "p=arange(0,101,1)\n",
     "lin=p\n",
@@ -505,7 +525,7 @@
     "legend(fontsize=tamano, fancybox=True, loc=2).get_frame().set_alpha(0.5)\n",
     "grid()\n",
     "savefig(Nombre + '/' + 'EnrichmentCurveCODE.png')\n",
-    "show()"
+    "#show()"
    ]
   },
   {
@@ -521,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -550,23 +570,23 @@
     "arch.write('\\n Calculated activity values set in column: ' + str(len(DatosArreg[:,0])-1))\n",
     "arch.write('\\n Finish time: ' + str(finish_mom))\n",
     "arch.write('\\n Running time (s): ' + str(abs(time.time()-start_time)))  \n",
-    "arch.write('\\n \\n The best parameters found were: ' + str(parametros_sin_error))\n",
     "\n",
     "arch.write('\\n \\n \\n For the Monte Carlo (MC) calculation: ')\n",
+    "arch.write('\\n \\n The best parameters found were: ' + str(parametros_sin_error))\n",
     "arch.write('\\n Saved figure ' + Nombre + '/triangle.png contains the corner graphs of the MC run')\n",
     "arch.write('\\n Saved figure ' + Nombre + '/chi_squared.png contains the value of $chi^2$ as a function of the iteration step for one walker')\n",
     "arch.write('\\n Saved figure ' + Nombre + '/chi_squared_log.png contains the value of $log{chi^2}$ as a function of the iteration step for one walker')\n",
     "\n",
     "arch.write('\\n \\n \\n For the Training Set: ')\n",
     "arch.write('\\n \\n The fitting line between experimental and predicted activity had an r^2 of: ' + str(regre_train[2]**2))\n",
-    "arch.write('\\n The equation of this line is: PRED = ' + str(regre_train[0]) + '*EXP + ' + str(regre_train[1]))\n",
+    "arch.write('\\n The equation of this line is: PREDICT = ' + str(regre_train[0]) + '*EXPERIMENT + ' + str(regre_train[1]))\n",
     "arch.write('\\n Saved figure ' + Nombre + '/ActTrainSet.png contains the fitting of the predicted activity to the experimental one using an MC method for the Training Set')\n",
     "arch.write('\\n Saved figure ' + Nombre + '/ActTrainSetPredExp.png contains the predicted activities as a function of the experimental ones for the Training Set')\n",
     "\n",
     "\n",
     "arch.write('\\n \\n \\n For the Test Set: ')\n",
     "arch.write('\\n \\n The fitting line between experimental and predicted activity had an r^2 of: ' + str(regre_test[2]**2))\n",
-    "arch.write('\\n The equation of this line is: PRED = ' + str(regre_test[0]) + '*EXP + ' + str(regre_test[1]))\n",
+    "arch.write('\\n The equation of this line is: PREDICT = ' + str(regre_test[0]) + '*EXPERIMENT + ' + str(regre_test[1]))\n",
     "arch.write('\\n Saved figure ' + Nombre + '/ActTestSet.png contains the fitting of the predicted activity to the experimental one using an MC method for the Test Set')\n",
     "arch.write('\\n Saved figure ' + Nombre + '/ActTestSetPredExp.png contains the predicted activities as a function of the experimental ones for the Test Set')\n",
     "\n",
