Todos los Option Parser funcionan

--- a/CODE.ipynb
+++ b/CODE.ipynb
@@ -56,9 +56,9 @@
     "parser.add_option(\"-n\", \"--param\", action=\"store\", type=\"int\", dest=\"NumParam\", help=\"Number of columns previous to the last one that will be considered as parameters for the MC fitting.\")\n",
     "parser.add_option(\"-t\", \"--train\", action=\"store\", type=\"int\", dest=\"NumTrainMol\", help=\"Number of random entries (rows) from the input file that will be considered as part of the training set. All the molecules that are not in the Training Set will be part of the Test Set.\")\n",
     "parser.add_option(\"-s\", \"--seed\", action=\"store\", type=\"int\", dest=\"RandomSeed\", help=\"Seed used for the semi-random selection of the entries used in the Training Set.\")\n",
-    "parser.add_option(\"-th\", \"--threshold\", action=\"store\", type=\"int\", dest=\"Threshold\", help=\"Entries with an activity lower or equal than this value will be considered as active molecules.\")\n",
-    "parser.add_option(\"-cb\", \"-cboolean\", action=\"store\", type=\"int\", dest=\"BooleanActivity\", help=\"Number of the column (starting from 0) that is going to be overwritten depending on the numeric value of the activity (see option -th).\")\n",
-    "parser.add_option(\"-ca\", \"-cactivity\", action=\"store\", type=\"int\", dest=\"NumericActivity\", help=\"Number of the column (starting from 0) that contains the numeric activity of each entry.\")\n",
+    "parser.add_option(\"-d\", \"--threshold\", action=\"store\", type=\"int\", dest=\"Threshold\", help=\"Entries with an activity lower or equal than this value will be considered as active molecules.\")\n",
+    "parser.add_option(\"-b\", \"--cboolean\", action=\"store\", type=\"int\", dest=\"BooleanActivity\", help=\"Number of the column (starting from 0) that is going to be overwritten depending on the numeric value of the activity (see option -th).\")\n",
+    "parser.add_option(\"-a\", \"--cactivity\", action=\"store\", type=\"int\", dest=\"NumericActivity\", help=\"Number of the column (starting from 0) that contains the numeric activity of each entry.\")\n",
     "\n",
     "(options, args) = parser.parse_args()"
    ]
