--- a/CODE.ipynb
+++ b/CODE.ipynb
@@ -567,7 +567,7 @@
     "arch.write('\\n Random seed: ' + str(semilla))\n",
     "arch.write('\\n Boolean activity set to column: ' + str(coluAct) + ' (starting from 0)')\n",
     "arch.write('\\n Numeric activity value taken from column: ' + str(coluMIC))\n",
-    "arch.write('\\n Calculated activity values set in column: ' + str(len(DatosArreg[:,0])-1))\n",
+    "arch.write('\\n Calculated activity values writen in column: ' + str(len(DatosArreg[0,:])-1))\n",
     "arch.write('\\n Finish time: ' + str(finish_mom))\n",
     "arch.write('\\n Running time (s): ' + str(abs(time.time()-start_time)))  \n",
     "\n",
@@ -594,7 +594,7 @@
     "\n",
     "arch.close()\n",
     "    \n",
-    "msj='Toda la informacion de este calculo se salvo en la carpeta: ' + Nombre\n",
+    "msj='All the information regarding this calculation and its results were saved to directory: ' + Nombre\n",
     "print msj"
    ]
   },
